--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
     width: 127px;
     height: 40px;
     font-family: "Bitter";
-    font-size: 14px;
+    font-size: 15px;
     color: rgba(255, 255, 255, 1);
     margin-left: 100px;
     margin-top: 10px;
@@ -111,4 +111,464 @@
     position: absolute;
     margin-left: -120px;
     margin-top: 113px;
+}
+.firstcard{
+    margin-top: 100px;
+}
+.firstcard h6{
+font-family: "Bitter";
+color: rgba(211, 165, 98, 1);
+font-style: italic;
+font-size: 13px;
+}
+.firstcard h2{
+    font-family: "Montserrat";
+    font-size: 24px;
+    font-weight: 600;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 64px;
+    margin-top: -10px;
+}
+.firstcard h4{
+    font-family: "Bitter";
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 120px;
+    line-height: 24px;
+    margin-top: -20px;
+}
+.styled_hr1{
+    color: rgba(211, 165, 98, 1);
+    width: 344px;
+    margin-left: -0px;
+    margin-top: -15px;
+}
+.secondcard h6{
+    font-family: "Bitter";
+    color: rgba(211, 165, 98, 1);
+    font-style: italic;
+    font-size: 13px;
+}
+.secondcard h2{
+    font-family: "Montserrat";
+    font-size: 24px;
+    font-weight: 600;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 64px;
+    margin-top: -10px;
+}
+.secondcard h4{
+    font-family: "Bitter";
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 72px;
+    line-height: 24px;
+}
+.styled_hr2{
+    color: rgba(211, 165, 98, 1);
+    width: 344px;
+    margin-left: -0px;
+    margin-top: 30px;
+}
+.thirdcard h6{
+    font-family: "Bitter";
+    color: rgba(211, 165, 98, 1);
+    font-style: italic;
+    font-size: 13px;
+}
+.thirdcard h2{
+    font-family: "Montserrat";
+    font-size: 24px;
+    font-weight: 600;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 128pxpx;
+    margin-top: -10px;
+}
+.thirdcard h4{
+    font-family: "Bitter";
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 48px;
+    line-height: 24px;
+    margin-top: -10px;
+}
+.styled_hr3{
+    color: rgba(211, 165, 98, 1);
+    width: 344px;
+    margin-left: -0px;
+    margin-top: 30px;
+}
+.fourthcard h6{
+    font-family: "Bitter";
+    color: rgba(211, 165, 98, 1);
+    font-style: italic;
+    font-size: 13px;
+}
+.fourthcard h2{
+    font-family: "Montserrat";
+    font-size: 24px;
+    font-weight: 600;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 128pxpx;
+    margin-top: -10px;
+}
+.fourthcard h4{
+    font-family: "Bitter";
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 120px;
+    line-height: 24px;
+    margin-top: -10px;
+}
+.styled_hr4{
+    color: rgba(211, 165, 98, 1);
+    width: 344px;
+    margin-left: -0px;
+    margin-top: -10px;
+}
+.fifthcard h6{
+    font-family: "Bitter";
+    color: rgba(211, 165, 98, 1);
+    font-style: italic;
+    font-size: 13px;
+}
+.fifthcard h2{
+    font-family: "Montserrat";
+    font-size: 24px;
+    font-weight: 600;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 128pxpx;
+    margin-top: -10px;
+}
+.fifthcard h4{
+    font-family: "Bitter";
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 48px;
+    line-height: 24px;
+    margin-top: -10px;
+}
+.styled_hr5{
+    color: rgba(211, 165, 98, 1);
+    width: 344px;
+    margin-left: -0px;
+    margin-top: 50px;
+}
+.sixthcard h6{
+    font-family: "Bitter";
+    color: rgba(211, 165, 98, 1);
+    font-style: italic;
+    font-size: 13px;
+}
+.sixthcard h2{
+    font-family: "Montserrat";
+    font-size: 24px;
+    font-weight: 600;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 128pxpx;
+    margin-top: -10px;
+}
+.sixthcard h4{
+    font-family: "Bitter";
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(50, 46, 41, 1);
+    width: 342px;
+    height: 48px;
+    line-height: 24px;
+    margin-top: -10px;
+}
+.styled_hr6{
+    color: rgba(211, 165, 98, 1);
+    width: 344px;
+    margin-left: -0px;
+    margin-top: 50px;
+}
+.vertical-line {
+    width: 2px;
+    height: 1576px;
+    background-color: rgba(189, 189, 189, 1);
+    margin-top: -1570px;
+    margin-left: 420px;
+
+}
+.mfirstcard{
+    text-align: right;
+    margin-top: -1600px;
+}
+.mfirstcard h6{
+    font-family: "Bitter";
+    color: rgba(211, 165, 98, 1);
+    font-style: italic;
+    font-size: 13px;
+    position: absolute;
+    margin-left: 500px;
+    margin-top: -0px;
+}
+.mfirstcard h2{
+    font-family: "Montserrat";
+    font-size: 32px;
+    font-weight: 600;
+    color: rgba(50, 46, 41, 1);
+    width: 344px;
+    height: 160px;
+    line-height: 40px;
+    text-align: left;
+    margin-left: 500px;
+    padding-top: 30px;
+}
+.mfirstcard h4{
+    font-family: "Bitter";
+    font-size: 13px;
+    font-weight: 400;
+    color: rgba(50, 46, 41, 1);
+text-align: left; 
+    margin-left: 500px;
+    margin-top: -10px;   
+}
+.styled_mhr1{
+    color: rgba(211, 165, 98, 1);
+    width: 704px;
+    margin-left: 500px;
+    margin-top: 30px;
+}
+.lake{
+    position: absolute;
+    margin-top: -290px;
+    margin-left: 860px;
+}
+.msecondcard h6{
+    font-family: "Bitter";
+    color: rgba(211, 165, 98, 1);
+    font-style: italic;
+    font-size: 13px;
+    position: absolute;
+    margin-left: 500px;
+    margin-top: -0px;
+
+   
+}
+.msecondcard h2{
+    font-family: "Montserrat";
+    font-size: 32px;
+    font-weight: 600;
+    color: rgba(50, 46, 41, 1);
+    width: 550px;
+    height: 80px;
+    text-align: left;
+    margin-left: 500px;
+    padding-top: 30px;
+}
+.msecondcard h4{
+    font-family: "Bitter";
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(50, 46, 41, 1);
+    width: 450px;
+    height: 94px;
+    line-height: 24px;
+    height: 96px;
+text-align: left; 
+    margin-left: 500px;
+    margin-top: -20px;   
+}
+.styled_mhr2{
+    color: rgba(211, 165, 98, 1);
+    width: 704px;
+    margin-left: 500px;
+    margin-top: 30px;
+}
+.searchmain{
+    background-color: rgba(211, 165, 98, 1);
+    border-radius: 12px;
+    border: none;
+    width: 127px;
+    height: 40px;
+    font-family: "Bitter";
+    font-size: 15px;
+    color: rgba(255, 255, 255, 1);
+    position: absolute;
+    margin-top: -100px;
+    margin-left: 1080px;
+}
+.mthirdcard h6{
+    font-family: "Bitter";
+    color: rgba(211, 165, 98, 1);
+    font-style: italic;
+    font-size: 13px;
+    position: absolute;
+    margin-left: 500px;
+    margin-top: -0px;
+
+   
+}
+.mthirdcard h2{
+    font-family: "Montserrat";
+    font-size: 32px;
+    font-weight: 600;
+    color: rgba(50, 46, 41, 1);
+    width: 550px;
+    height: 80px;
+    text-align: left;
+    margin-left: 500px;
+    padding-top: 30px;
+}
+.mthirdcard h4{
+    font-family: "Bitter";
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(50, 46, 41, 1);
+    width: 450px;
+    height: 94px;
+    line-height: 24px;
+    height: 96px;
+text-align: left; 
+    margin-left: 500px;
+    margin-top: -20px;   
+}
+.searchmain2{
+    background-color: rgba(211, 165, 98, 1);
+    border-radius: 12px;
+    border: none;
+    width: 127px;
+    height: 40px;
+    font-family: "Bitter";
+    font-size: 15px;
+    color: rgba(255, 255, 255, 1);
+    position: absolute;
+    margin-top: -100px;
+    margin-left: 1080px;
+}
+.background-image{
+    display: block;
+
+}
+.rasm img{
+    margin-left: 500px;
+    position: relative;
+    display: inline-block;
+}
+.overlay {
+    position: absolute;
+    width: 406px;
+    height: 332px;
+    margin-left: 500px;
+    margin-top: -335px;
+    background-color: rgba(136, 140, 148, 1);
+}
+.overlay h6{
+    font-family: "Bitter";
+    color: rgba(255, 255, 255, 1);
+    font-style: italic;
+    font-size: 13px;
+    margin-left: 30px ;
+    margin-top:  30px;
+}
+.overlay h2{
+    font-family: "Montserrat";
+    font-size: 24px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 1);
+    width: 342px;
+    height: 64px;
+    margin-top: 50px;
+    margin-left: 30px;
+}
+.overlay h4{
+    font-family: "Bitter";
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 1);
+    width: 280px;
+    height: 120px;
+    line-height: 24px;
+    margin-top: -10px;
+    margin-left: 30px;
+}
+.styled_mhr3{
+    color: rgba(211, 165, 98, 1);
+    width: 704px;
+    margin-left: -0px;
+    margin-top: 80px;
+}
+.flogo{
+    margin-top: 170px;
+}
+.ftext{
+    display: block;
+    gap: 16px;
+    font-family: "Bitter";
+    font-weight: 300;
+    font-size: 16px;
+    color: rgba(50, 46, 41, 1);
+    margin-top: 80px;
+}
+.foottext{
+    display: flex;
+    gap: 24px;
+    font-family: "Bitter";
+    font-size: 15px;
+    color: rgba(50, 46, 41, 1);
+    margin-top: -270px;
+    margin-left: 800px;
+}
+.networks{
+    margin-left: 1040px;
+    display: flex;
+    gap: 16px;
+    margin-top: 30px;
+
+}
+.we{
+    font-family: "Bitter";
+    font-size: 16px;
+    font-weight: 500;
+    color: rgba(50, 46, 41, 1);
+    margin-top: 70px;
+    margin-left: 1100px;
+}
+.past{
+    margin-top: 150px;
+}
+.past h4{
+    color: rgba(50, 46, 41, 1);
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: 400;
+}
+.rub{
+    background-color: rgba(136, 140, 148, 1);
+    width: 351px;
+    height: 48px;
+    border-radius: 28px;
+    position: absolute;
+    margin-top: -50px;
+    margin-left: 350px;
+    border: none;
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 1);
+}
+.logos{
+    display: flex;
+    gap: 20px;
+    margin-left: 990px;
+    margin-top: -50px;
 }
